Add scalar function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,11 @@ path = "src/wasm_lib.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
-duckdb = { version = "1.2.0", features = ["vtab-loadable"] }
+duckdb = { version = "1.2.0", features = [
+    "vtab-loadable",
+    "vscalar",
+    "vtab-arrow",
+    "vscalar-arrow",
+] }
 duckdb-loadable-macros = "0.1.4"
 libduckdb-sys = { version = "1.2.0", features = ["loadable-extension"] }
